# ChangeLog for dev-java/spring-core
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  17 Sep 2013; Johann Schmitz <ercpe@gentoo.org> files/3.2.4-build.xml,
  metadata.xml, spring-core-3.2.4.ebuild:
  Install test utils if build with +test to ease the test phase of the other
  spring-* packages.

  15 Sep 2013; Johann Schmitz <ercpe@gentoo.org> files/3.2.4-build.xml,
  spring-core-3.2.4.ebuild:
  Polished spring-core: Make tests run, simplified ebuild + enhanced build.xml

  13 Sep 2013; Johann Schmitz <ercpe@gentoo.org> spring-core-3.2.4.ebuild:
  Fixed dependencies

  04 Sep 2013; Johann Schmitz <ercpe@gentoo.org> files/3.2.4-build.xml,
  spring-core-3.2.4.ebuild:
  Full ebuild for spring-core

*spring-core-3.2.4 (01 Sep 2013)

  01 Sep 2013; Johann Schmitz <ercpe@gentoo.org> +files/3.2.4-build.xml,
  +metadata.xml, +spring-core-3.2.4.ebuild:
  Added ebuild for spring-core - test suite not working yet, so work in progress