@@ -1,1 +1,2 @@
+DIST spring-framework-3.2.4-buildscripts.tar.bz2 2427 SHA256 14984807765b5abe21b6e104db779e1c67af0d2d6f7fbe42c3856b2e1026de8f SHA512 01957e0d6d69a6e4f9fdedff25657b38655a8944888e26215f6db64802110df2cc72b0d1f7ae59a5a9fb48c8a3da93c10bd17fe09e70413f9ee17f0f0f5ebf64 WHIRLPOOL 31359fbc545c159690c7df96dacacd58c8553e725a7af00d474dcc55ce238437794dc9d45d1e2940a30505bbaf1394f4f23c2a88a6f3d3809dbad35166b4cfdb
 DIST spring-framework-3.2.4.tar.gz 8925304 SHA256 0e0ad9631ea17a90fd8bc2565a7fb5b29ad12c1bf9ec9582f77019b5b041d08d SHA512 6a8fe58213f105deaa982b188e7b49a5bd9e0cf32917c568423509fed6b7c708cb5ca42ee7b3818327d673e59e7af7c67c13707e8a635329540b2febddda0f1b WHIRLPOOL f3dba92202402a676d8ad37c0b80d3a7616eecd780477ff21865305e2e2e5048b525ad9d14d36c0c0def96da305e3067e02617e10b949600ba819612f9edf48b
