@@ -1,124 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-
-<project name="spring-core" default="jar" basedir=".">
-
-	<property name="src.dir" value="${basedir}/src/main/java" />
-	<property name="src.dir.test" value="${basedir}/src/test/java" />
-	<property name="resources.test" value="${basedir}/src/test/resources" />
-	<property name="reports.tests" value="${basedir}/test-output" />
-	<property name="classes.dir" value="${basedir}/classes" />
-	<property name="classes.dir.test" value="${basedir}/classes-test" />
-	<property name="dist.dir" value="${basedir}/dist" />
-
-	<property name="lib.dir" value="${basedir}/lib" />
-
-	<target name="clean" description="Clean the output directory">
-		<delete dir="${classes.dir}" />
-	</target>
-
-	<!--
-		This task repackage asm and cglib into org.springframework.{asm,cglib}.
-		Technically it's possible to unbundle asm and cglib but this involves
-		a lot of work in each and every spring-* module.
-		At least we use a gentoo-built version of them...
-	-->
-	<target name="bundle-asm-cglib">
-		<mkdir dir="${dist.dir}" />
-		<taskdef name="jarjar" classname="com.tonicsystems.jarjar.JarJarTask" />
-
-		<jarjar jarfile="${dist.dir}/asm-renamed.jar">
-			<zipfileset src="${lib.dir}/asm.jar" />
-			<rule pattern="org.objectweb.asm.**" result="org.springframework.asm.@1" />
-		</jarjar>
-		<jarjar jarfile="${dist.dir}/cglib-renamed.jar">
-			<zipfileset src="${lib.dir}/cglib.jar" />
-			<rule pattern="net.sf.cglib.**" result="org.springframework.cglib.@1" />
-		</jarjar>
-	</target>
-
-	<target name="compile" depends="clean,bundle-asm-cglib">
-		<mkdir dir="${classes.dir}" />
-
-		<javac destdir="${classes.dir}" nowarn="false" debug="true" optimize="true" deprecation="false" target="1.5" verbose="false" fork="false" source="1.5">
-			<src path="${src.dir}" />
-			<classpath>
-				<pathelement location="${dist.dir}/asm-renamed.jar" />
-				<pathelement location="${dist.dir}/cglib-renamed.jar" />
-			</classpath>
-		</javac>
-	</target>
-
-	<target name="compile-tests">
-		<mkdir dir="${classes.dir.test}" />
-		<javac destdir="${classes.dir.test}" nowarn="false" debug="true" optimize="true" deprecation="false" target="1.5" verbose="false" fork="false" source="1.5">
-			<src path="${src.dir.test}" />
-			
-			<!-- jdk 1.7 only -->
-			<exclude name="org/springframework/core/annotation/AnnotationAwareOrderComparatorTests.java"/>
-			<exclude name="org/springframework/core/style/ToStringCreatorTests.java"/>
-			<exclude name="org/springframework/util/MethodInvokerTests.java"/>
-			
-			<classpath>
-				<pathelement location="${dist.dir}/asm-renamed.jar" />
-				<pathelement location="${dist.dir}/cglib-renamed.jar" />
-				<pathelement location="${classes.dir}" />
-			</classpath>
-		</javac>
-		
-		<copy todir="${classes.dir.test}" verbose="true">
-			<fileset dir="${resources.test}"/>
-		</copy>
-	</target>
-
-	<target name="package-test" depends="compile-tests">
-		<jar jarfile="${dist.dir}/${ant.project.name}-test-utils.jar" compress="true" index="false" basedir="${classes.dir.test}">
-			<exclude name="**/*Tests.*" />
-			<exclude name="**/*Test.*" />
-			<exclude name="**/*Tests.*" />
-			<exclude name="**/*TestCase.*" />
-			<exclude name="**/*Test*$*.class" />
-		</jar>
-	</target>
-	
-	<target name="test" depends="compile-tests, package-test">
-		<mkdir dir="${reports.tests}" />
-		<junit printSummary="yes" haltonerror="true" haltonfailure="true" fork="true" dir=".">
-			<sysproperty key="log4j.configuration" value="log4j.xml"/>
-
-			<classpath>
-				<pathelement location="${classes.dir}" />
-				<pathelement location="${classes.dir.test}" />
-				<pathelement location="${src.dir.test}" />
-				<pathelement location="${dist.dir}/asm-renamed.jar" />
-				<pathelement location="${dist.dir}/cglib-renamed.jar" />
-			</classpath>
-
-			<sysproperty key="basedir" value="." />
-
-			<formatter type="xml" />
-			<formatter type="plain" usefile="false" />
-
-			<batchtest todir="${reports.tests}">
-				<fileset dir="${classes.dir.test}">
-					<include name="**/*Tests.class" />
-					<exclude name="**/*Abstract*.*" />
-					<exclude name="**/*$*.class" />
-					<exclude name="**/org/springframework/core/io/support/PathMatchingResourcePatternResolverTests*" /> <!-- bogus check on gentoo -->
-					<!-- The following test fail every time. Maybe it's something gentoo specific - needs debugging -->
-					<exclude name="**/org/springframework/core/env/PropertySourceTests*" />
-					<exclude name="**/org/springframework/util/Log4jConfigurerTests*" />
-					<exclude name="**/org/springframework/util/StreamUtilsTests*" />
-					<exclude name="**/org/springframework/util/xml/StaxEventXMLReaderTests*" />
-				</fileset>
-			</batchtest>
-		</junit>
-	</target>
-
-	<target name="javadoc">
-		<javadoc sourcepath="${src.dir}" packagenames="*" destdir="${dist.dir}/apidocs" />
-	</target>
-
-	<target name="jar" depends="compile">
-		<jar jarfile="${dist.dir}/${ant.project.name}.jar" compress="true" index="false" basedir="${classes.dir}" excludes="**/package.html" />
-	</target>
-</project>
